--- a/src/html/home.html
+++ b/src/html/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oltre l'obiettivo-Home</title>
+    <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 
@@ -23,30 +24,38 @@
         </nav>
     </header>
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis delectus corporis tenetur assumenda commodi
-            laboriosam temporibus ex illo fugit dolores, nihil impedit quam. Exercitationem totam inventore soluta
-            voluptatem modi est?
-        </p>
+        <section id="Home" aria-labelledby="brand-name">
+            <p>
+                Benvenuti in Oltre l’Obiettivo, dove ogni immagine racconta una storia. La mia passione per la
+                fotografia mi porta a catturare attimi autentici, emozioni sincere e dettagli che spesso sfuggono
+                all’occhio.
+                Dai ritratti ai paesaggi, dagli eventi speciali ai momenti quotidiani, ogni scatto è pensato per durare
+                nel tempo e far rivivere l’esperienza ogni volta che lo si guarda.
+                Credo nella forza delle immagini di trasmettere emozioni, evocare ricordi e comunicare senza parole.
+                Esplora il mio portfolio e scopri come posso trasformare i tuoi momenti più preziosi in ricordi
+                indelebili.
+            </p>
+        </section>
     </main>
     <footer>
-        <article>
-            fatto da federico zullo
-        </article>
-        <article>
-            per tutte le informazioni contattami a:
-            +39 333 1234567
-            oppure
-            email:
-            federico@test.com
-        </article>
-        <p>&copy; 2025 Oltre l'obiettivo. Tutti i diritti riservati.</p>
-        <p>
-            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">facebook</a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">instagram</a>
-            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">linkedin</a>
-        </p>
+        <div class="footer-left">
+            <p>Fatto da:
+                Federico Zullo</p>
+        </div>
+
+        <div class="footer-center">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        </div>
+
+        <div class="footer-right">
+            <p>Per tutte le informazioni contattami a:</p>
+            <p>+39 333 1234567</p>
+            <p>Email: federico@test.com</p>
+        </div>
     </footer>
+
 </body>
 
 </html>
