Refactor CSS styles and enhance HTML structure; add project section and footer details

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -7,6 +7,7 @@
     <title>Oltre l'obiettivo-Home</title>
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="/src/css/style.css">
+    <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,9 +45,12 @@
         </div>
 
         <div class="footer-center">
-            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
-            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
-            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-linkedin"></i></a>
         </div>
 
         <div class="footer-right">
