--- a/src/html/project.html
+++ b/src/html/project.html
@@ -4,8 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oltre l'obiettivo-Progetti</title>
+    <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+     <header>
+        <nav>
+            <ul>
+                <img src="/src/logo/logocamera.png" alt="logocamera">
+                <h1>Oltre l'obiettivo</h1>
+                <li>
+                    <a href="/src/html/home.html">Home</a>
+                    <a href="/src/html/gallery.html">Galleria</a>
+                    <a href="/src/html/biography.html">La mia storia</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+   <section id="Project" aria-labelledby="my-projects" class="project-header">
+    <h2>I miei progetti</h2>
+    <p>
+        Qui potete trovare una selezione dei miei progetti fotografici più recenti e significativi. 
+        Ogni progetto rappresenta un viaggio unico attraverso l'obiettivo della mia fotocamera, catturando momenti speciali, emozioni autentiche e storie che meritano di essere raccontate.
+        Dalle sessioni di ritratto ai paesaggi mozzafiato, dagli eventi culturali alle esperienze quotidiane, ogni progetto è stato realizzato con passione e dedizione per offrire immagini che parlano da sole.
+        Esplora i miei lavori e lasciati ispirare dalla bellezza del mondo attraverso la mia lente.
+    </p>
+</section>
+
+<section class="projects">
+    <div class="project-item">
+        <img src="https://picsum.photos/200?random=1" alt="immagine evento">
+        <h3>Servizi fotografici per eventi</h3>
+    </div>
+    <div class="project-item">
+        <img src="https://picsum.photos/200?random=3" alt="immagine ritratto">
+        <h3>Ritratti professionali</h3>
+    </div>
+    <div class="project-item">
+        <img src="https://picsum.photos/200?random=2" alt="immagine editing">
+        <h3>Editing e post produzione</h3>
+    </div>
+</section>
+    </main>
+       <footer>
+        <div class="footer-left">
+            <p>Fatto da:
+                Federico Zullo</p>
+        </div>
+
+        <div class="footer-center">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-linkedin"></i></a>
+        </div>
+
+        <div class="footer-right">
+            <p>Per tutte le informazioni contattami a:</p>
+            <p>+39 333 1234567</p>
+            <p>Email: federico@test.com</p>
+        </div>
+    </footer>
 </body>
 </html>
