--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oltre l'obiettivo-Galleria</title>
+    <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <img src="/src/logo/logocamera.png" alt="logocamera">
+                <h1>Oltre l'obiettivo</h1>
+                <li>
+                    <a href="/src/html/home.html">Home</a>
+                    <a href="/src/html/project.html">Progetti</a>
+                    <a href="/src/html/biography.html">La mia storia</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="Gallery" aria-labelledby="my-gallery" class="gallery-section">
+            <h1>la mia galleria</h1>
+            <div class="images-grid-up">
+                <img src="https://picsum.photos/200?random=6" alt="immagine">
+                <img src="https://picsum.photos/200?random=7" alt="immagine">
+                <img src="https://picsum.photos/200?random=8" alt="immagine">
+                <img src="https://picsum.photos/200?random=9" alt="immagine">
+                <img src="https://picsum.photos/200?random=10" alt="immagine">
+            </div>
+              <div class="images-grid-down">
+                <img src="https://picsum.photos/200?random=11" alt="immagine">
+                <img src="https://picsum.photos/200?random=12" alt="immagine">
+                <img src="https://picsum.photos/200?random=13" alt="immagine">
+                <img src="https://picsum.photos/200?random=14" alt="immagine">
+                <img src="https://picsum.photos/200?random=15" alt="immagine">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-left">
+            <p>Fatto da:
+                Federico Zullo</p>
+        </div>
+
+        <div class="footer-center">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-linkedin"></i></a>
+        </div>
+
+        <div class="footer-right">
+            <p>Per tutte le informazioni contattami a:</p>
+            <p>+39 333 1234567</p>
+            <p>Email: federico@test.com</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
