Refactor code structure for improved readability and maintainability

--- a/src/html/biography.html
+++ b/src/html/biography.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oltre l'obiettivo-La mia storia</title>
+    <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <header>
+        <nav>
+            <ul>
+                <img src="/src/logo/logocamera.png" alt="logocamera">
+                <h1>Oltre l'obiettivo</h1>
+                <li>
+                    <a href="/src/html/home.html">Home</a>
+                    <a href="/src/html/project.html">Progetti</a>
+                    <a href="/src/html/gallery.html">Galleria</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about" class="about-section">
+            <h2>La mia storia</h2>
+            <div class="about-content">
+                <img src="/src/img/avatarfotografo.jpeg" alt="avatarfotografo">
+                <p>
+                    La mia passione per la fotografia nasce dalla voglia di raccontare storie attraverso le immagini. Ogni
+                    scatto per me è un modo per catturare emozioni autentiche e momenti irripetibili, trasformandoli in
+                    ricordi destinati a durare nel tempo.
     
+                    Amo esplorare diversi generi fotografici, dai ritratti agli eventi, dai paesaggi alle scene di vita
+                    quotidiana, sempre con la stessa attenzione ai dettagli e alla luce. Credo che la fotografia non sia
+                    solo tecnica, ma soprattutto sensibilità e capacità di osservare ciò che spesso sfugge agli occhi.
+    
+                    Il mio obiettivo è trasmettere emozioni e valorizzare la bellezza di ogni attimo, andando oltre
+                    l’immagine stessa. Ogni progetto rappresenta un viaggio unico, fatto di creatività, dedizione e passione
+                    per questa straordinaria forma d’arte.
+                </p>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-left">
+            <p>Fatto da:
+                Federico Zullo</p>
+        </div>
+
+        <div class="footer-center">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer"><i
+                    class="fa-brands fa-linkedin"></i></a>
+        </div>
+
+        <div class="footer-right">
+            <p>Per tutte le informazioni contattami a:</p>
+            <p>+39 333 1234567</p>
+            <p>Email: federico@test.com</p>
+        </div>
+    </footer>
 </body>
+
 </html>
