--- a/src/html/biography.html
+++ b/src/html/biography.html
@@ -7,6 +7,7 @@
     <title>Oltre l'obiettivo-La mia storia</title>
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/mediaQuary.css">
     <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
 
