Add favicon link to biography, gallery, home, and project pages

--- a/src/html/biography.html
+++ b/src/html/biography.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href=" https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/mediaQuary.css">
+     <link rel="icon" href="/src/logo/logocamera.png" sizes="32x32" type="image/png">
     <script src="https://kit.fontawesome.com/5aba119754.js" crossorigin="anonymous"></script>
 </head>
 
